Import patches-unapplied version 1:5.13.2-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 49050bdf8decfc3a735d4dedff48237f2bd6f01b

New changelog entries:
  * New upstream development release
    - migrates accounts from ~/.mission-control to
      XDG_DATA_DIRS/telepathy/mission-control, which typically means
      ~/.local/share/telepathy/mission-control
    - if the user upgraded to Empathy 3 while running MC << 1:5.12.1-3,
      complete Empathy's password migration, avoiding inability to change
      the account's password in future (Closes: #687933)

--- a/config.h.in
+++ b/config.h.in
@@ -3,7 +3,7 @@
 /* Directory for account/connection mapping for crash recovery */
 #undef ACCOUNTS_CACHE_DIR
 
-/* Directory for storing accounts */
+/* Directory in which accounts were previously stored */
 #undef ACCOUNTS_DIR
 
 /* Defined to the non-IM service type for hidden accounts, if any */
