Import patches-unapplied version 1:5.14.0-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 5d3070361c3d25f630f09a7000f56fe56cd118d3

New changelog entries:
  * New upstream stable release

--- a/tests/twisted/tools/exec-with-log.sh.in
+++ b/tests/twisted/tools/exec-with-log.sh.in
@@ -50,6 +50,8 @@ elif test -n "$MISSIONCONTROL_TEST_REFDBG"; then
         if test -z "$MISSIONCONTROL_WRAPPER" ; then
                 MISSIONCONTROL_WRAPPER="refdbg"
         fi
+elif test -n "$MISSIONCONTROL_TEST_BACKTRACE"; then
+        MISSIONCONTROL_WRAPPER="gdb -x @abs_top_srcdir@/tools/run_and_bt.gdb"
 fi
 
 # The bus-daemon that is activating us doesn't know it's also the system bus
