--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -269,6 +269,7 @@ EXTRA_DIST = \
     lcov.am \
     libtpcodegen.py \
     libglibcodegen.py \
+    run_and_bt.gdb \
     spec-to-introspect.xsl \
     telepathy.am
 
