Import patches-unapplied version 1:5.14.1-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 21a9e87f2b10d61453311f3b16eb45776771b315

New changelog entries:
  * New upstream stable release

--- a/configure.ac
+++ b/configure.ac
@@ -1,13 +1,13 @@
 dnl Set the version number to e.g. 5.x.y immediately before a release.
 dnl Set the version number to e.g. 5.x.y+ immediately after (this will
 dnl enable -Werror).
-AC_INIT([telepathy-mission-control], [5.14.0])
+AC_INIT([telepathy-mission-control], [5.14.1])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR(Makefile.am)
 AM_INIT_AUTOMAKE([1.9 tar-ustar -Wno-portability])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES])
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 
 AC_CANONICAL_HOST
 
@@ -46,7 +46,7 @@ AC_SUBST([MCP_API_VERSION])
 # else if library source has changed since last release
 #     increment revision
 MCP_LT_CURRENT=4
-MCP_LT_REVISION=1
+MCP_LT_REVISION=2
 MCP_LT_AGE=4
 AC_SUBST([MCP_LT_CURRENT])
 AC_SUBST([MCP_LT_REVISION])
