Import patches-unapplied version 1:5.14.1-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 5b09b06075f0c41771b00c7c7476b19d146b0730

New changelog entries:
  * Use dh_autoreconf
  * Bump symbol versioning for mcp_account_storage_get_type() to 1:5.13.0~
    so that plugins that could rely on ::altered-one working correctly will
    depend on this version
  * Standards-Version: 3.9.4
  * Upload to unstable

--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ CONFIGURE_FLAGS += --with-connectivity=nm
 endif
 
 %:
-	dh $@ --with autotools_dev --parallel
+	dh $@ --with autoreconf --parallel
 
 override_dh_makeshlibs:
 	dh_makeshlibs -V
