--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ ACLOCAL_AMFLAGS = -I m4
 CHECK_FOR_UNRELEASED := \
     $(srcdir)/NEWS \
     $(wildcard $(srcdir)/src/*.[ch]) \
-    $(wildcard $(libmmclient)/src/*.[ch]) \
+    $(wildcard $(mission-control-plugins)/*.[ch]) \
     $(NULL)
 
 SUBDIRS = \
@@ -30,7 +30,7 @@ DISTCHECK_CONFIGURE_FLAGS = \
 maintainer-upload-release: _maintainer-upload-release-local
 _maintainer-upload-release-local: _maintainer-upload-release-check
 	rsync -rvzPp --chmod=Dg+s,ug+rwX,o=rX doc/reference/mission-control-plugins/html/ \
-	telepathy.freedesktop.org:/srv/telepathy.freedesktop.org/www/doc/mission-control-plugins/
+	telepathy.freedesktop.org:/srv/telepathy.freedesktop.org/www/doc/mission-control-plugins-5.16.x/
 
 include tools/lcov.am
 include tools/telepathy.am
