--- a/debian/control
+++ b/debian/control
@@ -16,10 +16,10 @@ Build-Depends: debhelper (>= 9),
                libtelepathy-glib-dev (>= 0.20),
                libupower-glib-dev,
                libnm-glib-dev [linux-any],
-               pkg-config (>= 0.21),
+               pkg-config,
                python (>= 2.6),
                xsltproc
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Vcs-Git: git://anonscm.debian.org/pkg-telepathy/telepathy-mission-control-5.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-telepathy/telepathy-mission-control-5.git;a=summary
 Homepage: http://telepathy.freedesktop.org/wiki/
