Import patches-unapplied version 1:5.16.1-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: de965e116df2e39c91e08508d4336c546aa86ea1

New changelog entries:
  * Disable UPower support and rely on logind to be notified about suspend,
    the current UPower support is incompatible with 0.99 (Closes: #748938)

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ CONFIGURE_FLAGS = --libexecdir=\$${prefix}/lib/telepathy \
                   --enable-gtk-doc \
                   --enable-gnome-keyring \
                   --with-html-dir=\$${prefix}/share/doc/libmission-control-plugins-doc \
-                  --enable-upower
+                  --disable-upower
 
 # We specifically do not want multiarch: only one version of MC can be
 # installed anyway, the plugin directory is based on the ${libdir}, and
