Import patches-unapplied version 1:5.16.3-1ubuntu1 to ubuntu/vivid-proposed
Imported using git-ubuntu import.

Changelog parent: 7c0d7c053aaa78a7944036ba6ed5d2789f4bfd36

New changelog entries:
  * Merge from Debian unstable.  Remaining changes:
    - debian/apparmor-profile, debian/control, debian/rules:
      + AppArmor confinement.
    - debian/telepathy-mission-control-5.apport, debian/rules:
      + Apport hook.

--- a/debian/rules
+++ b/debian/rules
@@ -53,4 +53,12 @@ override_dh_installdocs:
 		--link-doc=libmission-control-plugins0
 	dh_installdocs --remaining-packages
 
+# Install the AppArmor and apport hook. Override dh_compress since it is
+# sufficiently late in the package creation to do what we want.
+override_dh_compress:
+	dh_compress
+	cp debian/apparmor-profile debian/telepathy-mission-control-5/etc/apparmor.d/usr.lib.telepathy
+	dh_apparmor --profile-name=usr.lib.telepathy -ptelepathy-mission-control-5
+	cp debian/telepathy-mission-control-5.apport debian/telepathy-mission-control-5/usr/share/apport/package-hooks/source_telepathy-mission-control-5.py
+
 export DPKG_GENSYMBOLS_CHECK_LEVEL = 4
