--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: telepathy-mission-control-5
 Section: net
 Priority: optional
-Maintainer: Debian Telepathy maintainers <pkg-telepathy-maintainers@lists.alioth.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian Telepathy maintainers <pkg-telepathy-maintainers@lists.alioth.debian.org>
 Uploaders: Simon McVittie <smcv@debian.org>,
            Jonny Lamb <jonny@debian.org>,
            Sjoerd Simons <sjoerd@debian.org>,
@@ -17,7 +18,8 @@ Build-Depends: debhelper (>= 9),
                libnm-glib-dev [linux-any],
                pkg-config,
                python (>= 2.6),
-               xsltproc
+               xsltproc,
+               dh-apparmor
 Standards-Version: 3.9.5
 Vcs-Git: git://anonscm.debian.org/pkg-telepathy/telepathy-mission-control-5.git
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-telepathy/telepathy-mission-control-5.git;a=summary
@@ -28,7 +30,8 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libmission-control-plugins0 (= ${binary:Version})
-Suggests: telepathy-haze
+Suggests: telepathy-haze,
+          apparmor
 Conflicts: telepathy-mission-control
 Description: management daemon for Telepathy real-time communication framework
  Telepathy Mission Control 5 is an account manager and channel dispatcher for
