Import patches-unapplied version 1:5.16.3-1ubuntu2 to ubuntu/wily-proposed
Imported using git-ubuntu import.

Changelog parent: 7c437ca11b71742bc65a6206bacbb58a0bf6476b

New changelog entries:
  * debian/control:
    - libmission-control-plugins-dev depends on libtelepathy-glib-dev,
      since the .pc has it as a requires, thanks Rohan Garg (lp: #1464449)

--- a/debian/control
+++ b/debian/control
@@ -78,6 +78,7 @@ Architecture: any
 Section: libdevel
 Priority: extra
 Depends: libmission-control-plugins0 (= ${binary:Version}),
+         libtelepathy-glib-dev,
          ${misc:Depends}
 Suggests: libmission-control-plugins-doc
 Description: management daemon for Telepathy (headers for plugins)
