Import patches-unapplied version 1:5.16.3-1ubuntu5 to ubuntu/xenial-proposed
Imported using git-ubuntu import.

Changelog parent: 1ed3f54ff54fef76f8f53babd93b72a4ec7dd484

New changelog entries:
  * Multiarchify the library packages, removing the comment why the should
    not be M-A same packages. Allows installation of the library packages
    for cross builds.

--- a/debian/rules
+++ b/debian/rules
@@ -3,16 +3,12 @@
 include /usr/share/dpkg/default.mk
 
 CONFIGURE_FLAGS = --libexecdir=\$${prefix}/lib/telepathy \
+                  --libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH) \
                   --disable-Werror \
                   --enable-gtk-doc \
                   --enable-gnome-keyring \
                   --with-html-dir=\$${prefix}/share/doc/libmission-control-plugins-doc \
                   --disable-upower
-
-# We specifically do not want multiarch: only one version of MC can be
-# installed anyway, the plugin directory is based on the ${libdir}, and
-# empathy/experimental ships a plugin in the non-multiarch location
-CONFIGURE_FLAGS += --libdir=\$${prefix}/lib
 
 # Having a static library for a plugin loader is pretty useless, so get rid
 # of it.
@@ -30,7 +26,7 @@ override_dh_makeshlibs:
 
 override_dh_auto_install:
 	dh_auto_install
-	rm -f debian/tmp/usr/lib/libmission-control-plugins*.la
+	rm -f debian/tmp/usr/lib/*/libmission-control-plugins*.la
 
 override_dh_strip:
 	dh_strip --dbg-package=telepathy-mission-control-5-dbg
