--- a/debian/control
+++ b/debian/control
@@ -65,7 +65,9 @@ Description: management daemon for Telepathy (debug symbols)
 
 Package: libmission-control-plugins0
 Architecture: any
+Multi-Arch: same
 Section: libs
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: telepathy-mission-control-5 (= ${binary:Version})
 Description: management daemon for Telepathy (library for plugins)
@@ -75,6 +77,7 @@ Description: management daemon for Telepathy (library for plugins)
 
 Package: libmission-control-plugins-dev
 Architecture: any
+Multi-Arch: same
 Section: libdevel
 Priority: extra
 Depends: libmission-control-plugins0 (= ${binary:Version}),
